--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-main {
+/* main {
     display: grid;
     width: 95%;
     margin: 40px;
@@ -8,9 +8,9 @@ main {
     border-radius: 10px;
     
 
-}
+} */
 
-.mainmenu {
+/* .mainmenu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -32,7 +32,7 @@ color: azure;
 text-align: center;
 line-height: 1;
 font-size: 20px;
-}
+} */
 
 body {
     font-family: "Nunito", sans-serif;
@@ -114,4 +114,16 @@ body {
     transform: scale(1.3);
     background: #5f40e6;
     color: #c6aff1;
+}
+
+.music-player h1 {
+    font-size: 40px;
+    font-family: Circular, a geometric sans-serif;
+    color: #fefefe;
+}
+
+.music-player p {
+    font-size: 30px;
+    font-family: Gotham;
+    color: #5f40e6;
 }
